# gstreamer_learning

./: .gitignore
basic-tutorial-1/: CMakeLists.txt  basic-tutorial-1.c
basic-tutorial-10/: basic-tutorial-10.c
basic-tutorial-12/: CMakeLists.txt  basic-tutorial-12.c
basic-tutorial-13/: CMakeLists.txt  basic-tutorial-13.c
basic-tutorial-2/: CMakeLists.txt  basic-tutorial-2.c
basic-tutorial-3/: CMakeLists.txt  basic-tutorial-3.c
basic-tutorial-4/: CMakeLists.txt  basic-tutorial-4.c
basic-tutorial-5/: CMakeLists.txt  basic-tutorial-5.c
basic-tutorial-6/: CMakeLists.txt  basic-tutorial-6.c
basic-tutorial-7/: CMakeLists.txt  basic-tutorial-7.c
basic-tutorial-8/: CMakeLists.txt  basic-tutorial-8.c
basic-tutorial-9/: CMakeLists.txt  basic-tutorial-9.c
